--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="bundle.js"></script>
+<script src="assets/bundle.js"></script>
 </body>
 </html>
 
