--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
     <meta charset="utf-8">
     <title>Workout App</title>
 </head>
