--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="google-site-verification" content="0qGp8ykWF9rrCeNxLMLofknvo3tfoGc_L83Vx5iOCeI">
 
     <meta charset="utf-8">
     <title>Workout App</title>
@@ -14,4 +15,3 @@
 </body>
 </html>
 
-google-site-verification: googlea8213ca554ffd8c4.html
