--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 <div id="root"></div>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADkOrKh6sgBTRUanGiWKoYTsPWl37wgWU&amp;callback=initMap" type="text/javascript"></script>
 <script src="/bundle.js"></script>
+
 </body>
 </html>
 
