--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 <div id="root"></div>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADkOrKh6sgBTRUanGiWKoYTsPWl37wgWU&callback=initMap"
+  type="text/javascript"></script>
 <script src="/bundle.js"></script>
+
 </body>
 </html>
 
